<?xml version="1.0"?>
<package format="2">
  <name>e_demo</name>
  <version>0.0.0</version>
  <description>The event camera demo package.</description>
  <maintainer email="huang-x21@mails.tsinghua.edu.cn">Xiang Huang</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
 
  <depend>roscpp</depend>  
  <depend>cv_bridge</depend>
  <depend>dvs_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>eigen_catkin</depend>
  <depend>image_transport</depend>
</package>
